# PrivateKnowledgeBase

./: .cursorignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.cursor/: hooks.json
.cursor/hooks/: block-secrets.sh  session-context.sh
.cursor/rules/: 00-project-context.mdc  01-ai-development-contract.mdc  02-vertical-slice-delivery.mdc  03-secrets-and-security.mdc  adr-governance.mdc  alembic-migrations.mdc  ontology-yaml.mdc  python-adapters.mdc  python-agents.mdc  python-api.mdc  python-application.mdc  python-domain.mdc  python-worker.mdc  tests.mdc  typescript-web.mdc
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_outbox_foundation.py  0002_sources_registry.py  0003_content_chunks.py  0004_knowledge_proposals.py  0005_canonical_knowledge.py  0006_connector_credentials.py  0007_extraction_error.py  0008_contradiction_evidence.py  0009_triage_metadata.py  0010_project_reports.py  0011_ontology_proposals.py  0012_maintenance_flags.py
apps/api/src/api/: bootstrap.py  config.py  dependencies.py  main.py
apps/api/src/api/routes/: app_settings.py  canonical.py  google_connectors.py  health.py  ontology_proposals.py  operations.py  projects.py  proposals.py  questions.py  search.py  source_config.py  sources.py  sync_runs.py
apps/api/src/api/schemas/: app_settings.py  canonical.py  content.py  local_browse.py  ontology.py  operations.py  processing_stats.py  projects.py  proposals.py  questions.py  source_config.py  sources.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/worker/: __init__.py  celery_app.py  config.py  db.py  deps.py  pipeline.py  recovery.py
apps/worker/src/worker/tasks/: extraction.py  graph_projection.py  ingestion.py  knowledge_extraction.py  maintenance.py  ontology.py  reports.py
config/: settings.example.yaml  sources.example.yaml
docs/: 01-project-vision-and-concept.md  02-mvp-scope-and-product-requirements.md  03-functional-specification.md  04-domain-model-and-ontology.md  05-agent-architecture.md  06-system-architecture.md  07-technical-specification.md  08-ai-development-contract.md  09-testing-strategy.md  10-knowledge-management-and-security-policy.md  11-implementation-plan-and-backlog.md  12-technology-decisions-and-adr-index.md  13-personal-source-connectors-supplement.md  14-source-connection-ui-supplement.md  15-agent-implementation-plan.md  operator-guide.md  release-checklist.md
docs/adr/: ADR-001-runtime-and-deployment-model.md  ADR-002-backend-and-api.md  ADR-003-postgresql-and-pgvector.md  ADR-004-graph-database.md  ADR-005-background-jobs.md  ADR-006-agent-orchestration.md  ADR-007-llm-and-embedding-strategy.md  ADR-008-frontend.md  ADR-009-authentication-and-authorization.md  ADR-010-document-processing.md  ADR-011-ontology-storage.md  ADR-012-observability-and-audit.md  ADR-013-google-workspace-connectors.md
infra/docker/: docker-compose.override.generated.yml  docker-compose.yml
infra/scripts/: apply_pending_migrations.sql  backup.sh  e2e_smoke.sh  load_smoke.sh  prepare-host-sources.sh  restore.sh
tests/evaluation/: golden_questions.json
tests/integration/: .gitkeep
tests/security/: test_authorization.py
tests/unit/: test_app_settings.py  test_canonical_domain.py  test_chunking.py  test_content_hash.py  test_contradiction_detection.py  test_entity_resolution.py  test_entity_resolution_graph.py  test_extraction_golden.py  test_extraction_validation.py  (+19 more)
(+42 files in other folders)
