[project]
name = "private-knowledge-base"
version = "0.1.0"
description = "AI-Powered Personal Knowledge Operations System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
    "pkb-domain",
    "pkb-application",
    "pkb-adapters",
    "pkb-api",
]

[tool.uv.sources]
pkb-domain = { workspace = true }
pkb-application = { workspace = true }
pkb-adapters = { workspace = true }
pkb-api = { workspace = true }
pkb-worker = { workspace = true }

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/worker",
    "packages/domain",
    "packages/application",
    "packages/adapters",
    "packages/agents",
    "packages/ontology",
    "packages/prompts",
    "packages/observability",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps", "packages", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"apps/api/**" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["domain", "application", "adapters", "agents", "ontology", "prompts", "observability", "api", "worker"]
mypy_path = ["apps/api/src", "apps/worker/src", "packages/domain/src", "packages/application/src", "packages/adapters/src", "packages/agents/src", "packages/ontology/src", "packages/prompts/src", "packages/observability/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "apps/api/src",
    "apps/worker/src",
    "packages/domain/src",
    "packages/application/src",
    "packages/adapters/src",
    "packages/agents/src",
    "packages/ontology/src",
    "packages/prompts/src",
    "packages/observability/src",
]

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "worker.tasks.*"
disable_error_code = ["untyped-decorator"]

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true
