[project]
name = "pkb-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pkb-domain",
    "pkb-application",
    "pkb-adapters",
    "pkb-observability",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "alembic>=1.14",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.uv.sources]
pkb-domain = { workspace = true }
pkb-application = { workspace = true }
pkb-adapters = { workspace = true }
pkb-observability = { workspace = true }

[project.scripts]
pkb-api = "api.main:run"
